Task: Fixed the image alignment in testimonial section

--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -315,6 +315,10 @@ and (-webkit-min-device-pixel-ratio: 1) {
   .slider-margin{
     margin: 0px;
   }
+
+  .testimonial-image{
+    width: 100% !important;
+  }
 }
 
 @media screen and (max-width: 1024px) and (min-width: 681px) {
